# gtm-copilot-oss

./: .env.example  .gitignore  DEPLOY.md  GTM_COPILOT_USAGE_GUIDE.md  README.md
api/: Dockerfile  Procfile  alembic.ini  nixpacks.toml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260218_000001_initial.py  20260224_000002_add_feishu_source_type_and_kb_config_table.py  20260225_000001_add_llm_config_to_kb_config.py  20260227_000002_add_google_drive_user_credentials.py  20260227_000003_add_feishu_oauth_and_multi_root.py  20260301_000004_add_gtm_modules_phase1.py  20260312_add_gtm_v2_models.py  20260313_000007_add_reasoning_effort.py  20260316_000001_add_reasoning_and_user_prefs.py  20260316_000002_add_ai_feedback.py  20260316_000003_add_source_profiles.py  20260316_000004_tidb_compatibility.py  20260320_000001_add_templates_and_chat_history.py  20260322_000001_add_engagement_type.py  20260322_000002_add_meeting_summary_action_items.py  20260323_000001_add_prompt_studio_tables.py  20260323_000002_add_intel_brief_prefs.py  20260324_000001_add_hnsw_index_and_call_outcome.py  20260324_000002_add_chunk_quality_signals.py  20260324_000003_add_failure_category_and_prompt_suggestions.py  20260325_000001_add_account_deal_memory.py  20260326_000001_add_retrieval_cutover.py  20260326_000002_add_hnsw_knowledge_index.py
api/app/: celery.py  cli.py  main.py  worker.py
api/app/api/: deps.py  router.py
api/app/core/: constants.py  logging.py  (+1 more)
api/tests/: conftest.py  test_backfill_task.py  test_feishu_wiki.py  test_orm_models.py  test_retrieval_fanout.py
(+581 files in other folders)
